k8s/chart/templates/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: cnpg-system
---
apiVersion: v1
kind: Namespace
metadata:
    name: knative-serving
---
apiVersion: v1
kind: Namespace
metadata:
    name: kourier-system
---
